--- a/FetoTech/FeroTech.Web/Views/Asset/Create.cshtml
+++ b/FetoTech/FeroTech.Web/Views/Asset/Create.cshtml
@@ -8,7 +8,7 @@
 
 <hr />
 
-<form asp-action="Create" method="post">
+<form asp-action="AssetCreate" method="post">
     <div class="row">
         @* <div class="col-md-6 mb-3">
             <label class="form-label">Asset Tag</label>
