Asset Create.cshtml

--- a/FetoTech/FeroTech.Web/Views/Asset/Create.cshtml
+++ b/FetoTech/FeroTech.Web/Views/Asset/Create.cshtml
@@ -99,3 +99,20 @@
         </div>
     </div>
 </form>
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            @if (TempData["SuccessMessage"] != null)
+            {
+                        <text>
+                            Swal.fire({
+                                title: 'Success!',
+                                text: '@TempData["SuccessMessage"]',
+                                icon: 'success',
+                                confirmButtonText: 'OK'
+                            });
+                        </text>
+            }
+        });
+    </script>
+}
