--- a/FetoTech/FeroTech.Web/Views/Employee/Create.cshtml
+++ b/FetoTech/FeroTech.Web/Views/Employee/Create.cshtml
@@ -54,7 +54,7 @@
         </div>
 
         <div class="col-md-12 text-end">
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary">Save the content</button>
             <a asp-action="Index" class="btn btn-secondary">Cancel</a>
         </div>
     </div>
