--- a/FetoTech/FeroTech.Web/Views/Admin/Dashboard.cshtml
+++ b/FetoTech/FeroTech.Web/Views/Admin/Dashboard.cshtml
@@ -3,5 +3,5 @@
 }
 <h2>Welcome, @ViewBag.AdminEmail!</h2>
 <p>You are now logged in as Admin.</p>
-
+<p>This is Authorized</p>
 <a asp-action="Logout">Logout</a>
