--- a/FetoTech/FeroTech.Web/Views/Admin/Dashboard.cshtml
+++ b/FetoTech/FeroTech.Web/Views/Admin/Dashboard.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "Admin Dashboard";
 }
 <h2>Welcome, @ViewBag.AdminEmail!</h2>
-<p>You are now logged in as Admin.</p>
-<p>This is Authorized</p>
+
+<p>You are logged in as Admin.</p>
 <a asp-action="Logout">Logout</a>
