--- a/FetoTech/FeroTech.Web/Views/Asset/Create.cshtml
+++ b/FetoTech/FeroTech.Web/Views/Asset/Create.cshtml
@@ -10,23 +10,15 @@
 
 <form asp-action="Create" method="post">
     <div class="row">
-        @* <div class="col-md-6 mb-3">
-            <label class="form-label">Asset Tag</label>
-            <input asp-for="AssetTag" class="form-control" />
-        </div> *@
-
-        @* <div class="col-md-6 mb-3">
-            <label class="form-label">Name</label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div> *@
-
+        <!-- Category Dropdown -->
         <div class="col-md-6 mb-3">
-            <label class="form-label">Select a Category:</label>
-            <select asp-for="Category" class="form-control">
-                <option value="Keyboard">Keyboard</option>
-                <option value="Mouse">Mouse</option>
-                <option value="Camera">Camera</option>
+            <label class="form-label">Category</label>
+            <select asp-for="CategoryId" class="form-control">
+                <option value="">-- Select Category --</option>
+                @foreach (var c in ViewBag.CategoryList)
+                {
+                    <option value="@c.CategoryId">@c.CategoryName</option>
+                }
             </select>
         </div>
 
@@ -75,13 +67,6 @@
             <input asp-for="Quantity" type="number" class="form-control" min="1" />
             <span asp-validation-for="Quantity" class="text-danger"></span>
         </div>
-
-
-        @* <div class="col-md-6 mb-3">
-            <label class="form-label">Location</label>
-            <input asp-for="Location" class="form-control" />
-            <span asp-validation-for="Location" class="text-danger"></span>
-        </div> *@
 
         <div class="col-md-6 mb-3">
             <label class="form-label">Status</label>
