--- a/FetoTech/FeroTech.Web/Views/Shared/_Layout.cshtml
+++ b/FetoTech/FeroTech.Web/Views/Shared/_Layout.cshtml
@@ -38,12 +38,27 @@
                     <span>Dashboard</span>
                 </a>
             </li>
+
+            <li class="@((ViewContext?.RouteData?.Values["Controller"]?.ToString() == "Department") ? "active" : "")">
+                <a asp-controller="Department" asp-action="Index">
+                    <i class="fa-solid fa-building"></i>
+                    <span>Departments</span>
+                </a>
+            </li>
+            <li class="@((ViewContext?.RouteData?.Values["Controller"]?.ToString() == "Category") ? "active" : "")">
+                <a asp-controller="Category" asp-action="Index">
+                    <i class="fa-solid fa-list"></i>
+                    <span>Product Category</span>
+                </a>
+            </li>
+
             <li class="@((ViewContext?.RouteData?.Values["Controller"]?.ToString() == "Employee") ? "active" : "")">
                 <a asp-controller="Employee" asp-action="Index">
                     <i class="fa-solid fa-users"></i>
                     <span>Employees</span>
                 </a>
             </li>
+           
             <li class="@((ViewContext?.RouteData?.Values["Controller"]?.ToString() == "Asset") ? "active" : "")">
                 <a asp-controller="Asset" asp-action="Index">
                     <i class="fa-solid fa-briefcase"></i>
@@ -127,6 +142,8 @@
     <!-- Bootstrap Bundle CDN (Replaced local ~ link) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/2.3.4/js/dataTables.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/js/select2.min.js"></script>
 
     <script>
         // Wait for document to be fully loaded before running scripts
@@ -179,8 +196,15 @@
                 });
             });
         });
+        $(document).ready(function () {
+                $(".searchable").select2({
+                    theme: "classic",
+                    width: '100%'
+                });
+            });
     </script>
 
     @await RenderSectionAsync("Scripts", required: false)
+    @await Html.PartialAsync("_Alerts")
 </body>
 </html>
